--- a/jsquiz.css
+++ b/jsquiz.css
@@ -23,7 +23,7 @@ body{
     border-radius: 10px;
     box-shadow: 0 0 8px 8px whitesmoke;
     max-width: 80%;
-    margin-left: 80px;
+    margin-left: 7%;
     background-image: url("https://wallpapercave.com/wp/wp7752451.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
